@@ -5,5 +5,6 @@
   "magnify.clayworks_tab": "Clayworks",
   "magnify.jolly_boxes_tab": "Jolly Boxes",
   "magnify.dustrial_decor_tab": "'Dustrial Decor",
-  "magnify.upgrade_aquatic_tab": "Upgrade Aquatic"
+  "magnify.upgrade_aquatic_tab": "Upgrade Aquatic",
+  "magnify.sullys_mod_tab": "Sully's Mod"
 }
