@@ -19,6 +19,8 @@ dependencies {
     implementation fg.deobf("curse.maven:jolly-boxes-410698:4990867")
     implementation fg.deobf("curse.maven:dustrial-decor-401273:5074515")
     implementation fg.deobf("curse.maven:upgrade-aquatic-326895:5615651")
+    implementation fg.deobf("curse.maven:sullys-mod-386534:5043956")
+    implementation fg.deobf("curse.maven:geckolib-388172:5460309")
 }
 
 minecraft {
