@@ -4,6 +4,7 @@ V1.1.0
 • Added Upgrade Aquatic Support
 • Changed Arts & Crafts Creative Category Icon
 • Changed Jolly Boxes Creative Category Icon
+• Added Sully's Mod Support
 
 
 V1.0.0
